Reverting changes for TinyMCE overflow:hidden bug.

--- a/htdocs/styles/css/minimal/screen/content_minimal.css
+++ b/htdocs/styles/css/minimal/screen/content_minimal.css
@@ -382,7 +382,7 @@ dl.list {
    * @section content-forms
    */
 
-  form {}
+  form { overflow: hidden; }
 
   fieldset {
     border: 1px solid #ccc;
